[gd_scene load_steps=4 format=3 uid="uid://cl7ysebng8rc"]

[ext_resource type="Script" path="res://scripts/Enemy.gd" id="1_wntuc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_76dpe"]
size = Vector2(32, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_1hhjt"]
radius = 192.167

[node name="EnemyNode" type="RigidBody2D"]
collision_layer = 2
script = ExtResource("1_wntuc")

[node name="hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_76dpe")
metadata/_edit_lock_ = true

[node name="red" type="ColorRect" parent="."]
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
color = Color(1, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_1hhjt")

[node name="PlayerCollision" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionHitbox" type="CollisionShape2D" parent="PlayerCollision"]
shape = SubResource("RectangleShape2D_76dpe")
metadata/_edit_lock_ = true

[connection signal="area_entered" from="PlayerDetection" to="." method="_on_player_detection_area_entered"]
[connection signal="area_exited" from="PlayerDetection" to="." method="_on_player_detection_area_exited"]
[connection signal="area_entered" from="PlayerCollision" to="." method="_on_player_collision_entered"]
